Functional and performance comparison of JSON serde and validation li… (#22)
* Functional and performance comparison of JSON serde and validation libraries.

* Add dummy coveralls task to keep standard build file happy

* More logging and new workflows

* Get git clone working from workflow

cloning from unauthenticated account.

* Get schema draft loading working again.

Looks like json org added redirects to https, which isn't supported in old code.

* Add results to job summary

* Formatting

* Working dummy coveralls task